--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
 
     </div>
-    <script src="./js/script.js.js"></script>
+    <script src="../relogiodigital.html.css/script.js"></script>
 </body>
 
 </html>
